Add permission checking for clients CRUD